[package]
name = "loc"
version = "1.0.5"
edition = "2021"

[package.metadata.release]
publish = false
tag-name = "v{{version}}"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tar = "0.4"
flate2 = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
moka = { version = "0.12", features = ["future"] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tokio-util = { version = "0.7", features = ["io", "io-util"] }
